# pokecalc

./: README.rst  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
pokecalc/: calc.py  input.py  nature.py  pokemon.py  status.py
tests/: test_pokecalc.py  test_status.py
