[tool.poetry]
name = "pokecalc"
version = "0.0.1"
description = "Pokemon Calculation Algorithm Lib"
authors = ["mtaji <mtaji@morningcode.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
